xliff-22/test-suite/core/invalid/bad_PartIdNotUnique.xlf
<?xml version="1.0"?>
<xliff xmlns="urn:oasis:names:tc:xliff:document:2.2" version="2.2" srcLang="en" trgLang="fr">
 <file id="f1">
  <unit id="1">
   <segment id="1twice">
    <source>source</source>
   </segment>
   <ignorable id="1twice">
    <source> </source>
   </ignorable>
  </unit>
 </file>
</xliff>
